--- a/media/css/estilos.css
+++ b/media/css/estilos.css
@@ -67,7 +67,7 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
 
             /* formularios GERAL */
             body main .bemVindo .vitrine .formularios .formularioGeral {padding-top: 25px; border-top: solid 1px lightgrey;}
-                body main .bemVindo .vitrine .formularios .formularioGeral label {display: block; position: relative; transition: top 0.5s ease-out, font-size 0.3s ease, color 0.3s ease; top: -28px; line-height: 10px; opacity: 0; visibility: hidden; height: 15px;} 
+                body main .bemVindo .vitrine .formularios .formularioGeral label {display: block; position: relative; transition: top 0.5s ease-out, font-size 0.3s ease, color 0.3s ease; top: -28px; line-height: 10px; opacity: 0; visibility: hidden; height: 15px; font-size: 8px; left: 10px;}  
                 body main .bemVindo .vitrine .formularios .formularioGeral input, textarea {display: block; width: 100%; padding: 8px; transition: border-color 0.3s ease; border-bottom: solid 1px grey; line-height: 10px; margin-bottom: 5px; font-size: 13px;}
                 body main .bemVindo .vitrine .formularios .formularioGeral textarea {height: 30px; resize: none;}    
 
