--- a/media/css/estilos.css
+++ b/media/css/estilos.css
@@ -66,7 +66,8 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
                     body main .bemVindo .vitrine .formularios .formularioGeral {display: flex; flex-direction: column; width: 50%;}
 
             /* formularios GERAL */
-            body main .bemVindo .vitrine .formularios .formularioGeral {padding-top: 25px; border-top: solid 1px lightgrey;}
+            body main .bemVindo .vitrine .formularios .formularioGeral {padding-top: 25px; border-top: solid 1px lightgrey;}                
+
                 body main .bemVindo .vitrine .formularios .formularioGeral label {display: block; position: relative; transition: top 0.5s ease-out, font-size 0.3s ease, color 0.3s ease; top: -28px; line-height: 10px; opacity: 0; visibility: hidden; height: 15px; font-size: 8px; left: 10px;}  
                 body main .bemVindo .vitrine .formularios .formularioGeral input, textarea, select {display: block; width: 100%; padding: 8px; transition: border-color 0.3s ease; border-bottom: solid 1px grey; line-height: 10px; margin-bottom: 5px; font-size: 13px;}
                 body main .bemVindo .vitrine .formularios .formularioGeral textarea {height: 30px; resize: none;}    
@@ -86,6 +87,12 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
                     body main .bemVindo .vitrine .formularios .formularioGeral textarea:not(:placeholder-shown) + label, 
                     body main .bemVindo .vitrine .formularios .formularioGeral input:not(:placeholder-shown) + label {opacity: 1; visibility: visible; top: -50px; font-size: 10.5px; color: #ffffff; width: max-content; background-color: #0071cd; border-radius: 3px; padding: 0px 6px; line-height: 15px; left: 5px;}
                 
+                /* saldo devedor */
+                body main .bemVindo .vitrine .formularios .formularioGeral .saldoDevedor {position: relative; display: flex; flex-direction: column;}
+                    body main .bemVindo .vitrine .formularios .formularioGeral .saldoDevedor span:first-child {display: block; width: 100%; padding: 8px; transition: border-color 0.3s ease; border-bottom: solid 1px #007bff; line-height: 20px; margin-bottom: 18px; font-size: 13px; color: #000;}
+                    body main .bemVindo .vitrine .formularios .formularioGeral .saldoDevedor span:last-child {position: absolute; top: -12px; font-size: 10.5px; color: #ffffff; width: max-content; background-color: #0071cd; border-radius: 3px; padding: 0px 6px; line-height: 15px; left: 5px;}
+
+
                 body main .bemVindo .vitrine .formularios .formularioGeral button {border: solid 1px #101A28; border-radius: 10px; padding: 9px; text-transform: uppercase; font-weight: 500; cursor: pointer; transition: all 0.5s ease}
                     body main .bemVindo .vitrine .formularios .formularioGeral button:hover {background-color: #101A28; color: #EDEFEF;}
 
