--- a/media/css/estilos.css
+++ b/media/css/estilos.css
@@ -114,6 +114,9 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
                         body main .bemVindo .vitrine .formularios .formularioGeral .numeroComplemento .complemento:focus + label,
                         body main .bemVindo .vitrine .formularios .formularioGeral .numeroComplemento .complemento:not(:placeholder-shown) + label {opacity: 1; visibility: visible; top: -12px; left: 40%; font-size: 10.5px; color: #ffffff; width: max-content; background-color: #0071cd; border-radius: 3px; padding: 0px 6px; line-height: 15px;}
 
+            /* Tabela conultar produtos*/
+            body main .bemVindo .vitrine .formularios .tabelaGeral {display: flex;}
+                body main .bemVindo .vitrine .formularios .tabelaGeral table tbody tr td {border: 1px solid black; margin-right: 5px;}
 
 
                             
