--- a/media/css/estilos.css
+++ b/media/css/estilos.css
@@ -114,9 +114,15 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
                         body main .bemVindo .vitrine .formularios .formularioGeral .numeroComplemento .complemento:focus + label,
                         body main .bemVindo .vitrine .formularios .formularioGeral .numeroComplemento .complemento:not(:placeholder-shown) + label {opacity: 1; visibility: visible; top: -12px; left: 40%; font-size: 10.5px; color: #ffffff; width: max-content; background-color: #0071cd; border-radius: 3px; padding: 0px 6px; line-height: 15px;}
 
-            /* Tabela conultar produtos*/
+            /* Tabela conultar Geral */
             body main .bemVindo .vitrine .formularios .tabelaGeral {display: flex;}
-                body main .bemVindo .vitrine .formularios .tabelaGeral table tbody tr td {border: 1px solid black; margin-right: 5px;}
+                body main .bemVindo .vitrine .formularios .tabelaGeral table {margin:25px 20px;}
+                    body main .bemVindo .vitrine .formularios .tabelaGeral table tbody tr td, th {border-bottom: solid 1px #4293E0; padding: 2px 10px; max-width: 190px; font-size: 13px;}
+                        body main .bemVindo .vitrine .formularios .tabelaGeral table tbody tr td:nth-child(3) {max-width: 290px;}
+
+            /* Tabela consultar Clientes*/
+            body main .bemVindo .vitrine .formularios .tabelaConsultarClientes table tbody tr td, th  {font-size: 11.5px;}
+                body main .bemVindo .vitrine .formularios .tabelaConsultarClientes table tbody tr td:nth-child(1) {max-width: 20px;}
 
 
                             
