--- a/media/css/estilos.css
+++ b/media/css/estilos.css
@@ -59,7 +59,7 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
         body main .bemVindo .desativada {position: absolute; z-index: 10; opacity: 0; visibility: hidden;}
         body main .bemVindo .ativa {position: absolute; z-index: 10; opacity: 1; visibility: visible;} 
 
-        body main .bemVindo .vitrine {position: absolute; width: 99%; border: solid 2px #0071cd; padding: 2px; left: 5px; background-color: #ffffff; transition: all 0.5s ease;}
+        body main .bemVindo .vitrine {position: absolute; width: 99%; border: solid 2px #0071cd; padding: 2px; left: 5px; background-color: #ffffff; transition: all 0.5s ease; height: 100%; min-height: 668px; border-radius: 10px;}
             body main .bemVindo .vitrine .formularios {display: flex; flex-direction: column; width: 100%; align-content: center; flex-wrap: wrap; margin: 30px 0;}
                 body main .bemVindo .vitrine .formularios p {font-weight: bold; width: max-content; font-family: 'Readex Pro', sans-serif; font-size: 19px; color: #767676; padding-bottom: 3px; position: relative;}
                     body main .bemVindo .vitrine .formularios p::after {content: ""; display: block; position: absolute; background-color: #4293E0; width: 110%; height: 2px; bottom: -2px;}
@@ -114,7 +114,7 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
                         body main .bemVindo .vitrine .formularios .formularioGeral .inputMesmaLinha .complemento:focus + label,
                         body main .bemVindo .vitrine .formularios .formularioGeral .inputMesmaLinha .complemento:not(:placeholder-shown) + label {opacity: 1; visibility: visible; top: -12px; left: 40%; font-size: 10.5px; color: #ffffff; width: max-content; background-color: #0071cd; border-radius: 3px; padding: 0px 6px; line-height: 15px;}
 
-            /* Tabela conultar Geral */
+            /* Tabela consultar Geral */
             body main .bemVindo .vitrine .formularios .tabelaGeral {display: flex;}
                 body main .bemVindo .vitrine .formularios .tabelaGeral table {margin:25px 20px;}
                     body main .bemVindo .vitrine .formularios .tabelaGeral table tbody tr td, th {border-bottom: solid 1px #4293E0; padding: 2px 10px; max-width: 190px; font-size: 13px;}
@@ -126,7 +126,7 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
 
                 /* Sessão - realizar vendas */
                 body main .bemVindo .vitrine .formularios .formularioRealizarVenda {width: 90%;}
-                    body main .bemVindo .vitrine .formularios .formularioRealizarVenda .inputMesmaLinha .containerInputLabel {position: relative; display: flex; margin-right: 10px; width: 100%;}
+                    body main .bemVindo .vitrine .formularios .formularioRealizarVenda .inputMesmaLinha .containerInputLabel {position: relative; display: flex; margin-right: 17px; width: 100%;}
                         body main .bemVindo .vitrine .formularios .formularioRealizarVenda .inputMesmaLinha .containerInputLabel:nth-child(1) {width: 100%; max-width: 200px;}
                         body main .bemVindo .vitrine .formularios .formularioRealizarVenda .inputMesmaLinha .containerInputLabel:nth-child(2) {width: 100%; max-width: 200px;}
                         body main .bemVindo .vitrine .formularios .formularioRealizarVenda .inputMesmaLinha .containerInputLabel:nth-child(3) {width: 100%; max-width: 100px;}
@@ -158,9 +158,22 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
                         
                         body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho table {margin: 25px 0;}
                             body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho table tr th {text-align: left;}
+                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho table tr th:nth-child(1) {width: 25%;}
+                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho table tr th:nth-child(2) {width: 19%;} 
+                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho table tr th:nth-child(3) {width: 10%;}
+                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho table tr th:nth-child(4) {width: 5%;}
+                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho table tr th:nth-child(5) {width: 20%;}
+                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho table tr th:nth-child(6) {width: 10%;}
+                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho table tr th:nth-child(7) {width: 11%;}
+
                                 body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho table tr td button {border: none;border-radius: 10px; padding: 5px; text-transform: uppercase; font-weight: 500; cursor: pointer; transition: all 0.5s ease; font-size: 12px;}
                                     body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho table tr td button:hover {background-color: transparent; color: #ff0404;}
                                     body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho table tr td button em {color: #ff0404; font-weight: bold;}
+                        
+                        body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .valorTotal {text-transform: uppercase; margin-bottom: 20px; padding-bottom: 15px; border-bottom: solid 1px lightgrey; font-size: 16px; text-align: right;}
+                            body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .valorTotal em {font-weight: bold;}
+
+                            body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .botaoVendas {width: 100%; max-width: 300px; margin: 0 auto;}
 
 
                             
