--- a/media/css/estilos.css
+++ b/media/css/estilos.css
@@ -156,19 +156,20 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
                             body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .headerTabela button:hover {background-color: transparent; color: #ff0404; border: solid 1px #101A28;}
                             body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .headerTabela button em {color: #ff0404; font-weight: bold;}
                         
-                        body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho table {margin: 25px 0;}
-                            body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho table tr th {text-align: left;}
-                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho table tr th:nth-child(1) {width: 25%;}
-                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho table tr th:nth-child(2) {width: 19%;} 
-                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho table tr th:nth-child(3) {width: 10%;}
-                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho table tr th:nth-child(4) {width: 5%;}
-                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho table tr th:nth-child(5) {width: 20%;}
-                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho table tr th:nth-child(6) {width: 10%;}
-                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho table tr th:nth-child(7) {width: 11%;}
+                        body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda {margin: 25px 0;}
+                            body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr th, 
+                            body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr td {text-align: left;}
+                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr th:nth-child(1) {width: 25%;}
+                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr th:nth-child(2) {width: 19%;} 
+                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr th:nth-child(3) {width: 10%;}
+                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr th:nth-child(4) {width: 5%;}
+                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr th:nth-child(5) {width: 20%;}
+                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr th:nth-child(6) {width: 10%;}
+                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr th:nth-child(7) {width: 11%;}
 
-                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho table tr td button {border: none;border-radius: 10px; padding: 5px; text-transform: uppercase; font-weight: 500; cursor: pointer; transition: all 0.5s ease; font-size: 12px;}
-                                    body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho table tr td button:hover {background-color: transparent; color: #ff0404;}
-                                    body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho table tr td button em {color: #ff0404; font-weight: bold;}
+                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr td button {border: none;border-radius: 10px; padding: 5px; text-transform: uppercase; font-weight: 500; cursor: pointer; transition: all 0.5s ease; font-size: 12px;}
+                                    body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr td button:hover {background-color: transparent; color: #ff0404;}
+                                    body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr td button em {color: #ff0404; font-weight: bold;}
                         
                         body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .valorTotal {text-transform: uppercase; margin-bottom: 20px; padding-bottom: 15px; border-bottom: solid 1px lightgrey; font-size: 16px; text-align: right;}
                             body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .valorTotal em {font-weight: bold;}
@@ -178,12 +179,21 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
     /* pagina de impressão - about:blank */
     main .impressaoContainer {display: flex; margin: 20 auto; width: 100%; max-width: 900px; justify-content: center;}
         main .impressaoContainer .impressaoTabela {display: flex; flex-direction: column; font-family: 'Ubuntu'; width: 100%;}
-            main .impressaoContainer .impressaoTabela p {font-size: 22px;}
+
+            main .impressaoContainer .impressaoTabela .dadosVenda {display: flex; justify-content: space-between; margin: 20px 0;}
+                main .impressaoContainer .impressaoTabela .dadosVenda p {font-size: 22px; text-transform: capitalize;}
 
             main .impressaoContainer .impressaoTabela .dadosContainer {display: flex;}
 
             main .impressaoContainer .impressaoTabela .tabelaExtrato {margin: 20px 0;}
-                main .impressaoContainer .impressaoTabela .tabelaExtrato tr th, td {font-size: 20px; padding: 2px 10px; text-align: left; border-bottom: solid 1px #4293E0;}
+                main .impressaoContainer .impressaoTabela .tabelaExtrato tbody tr th, 
+                main .impressaoContainer .impressaoTabela .tabelaExtrato tbody tr td {font-size: 20px; padding: 2px 10px; text-align: center; border-bottom: solid 1px #4293E0;}
+                
+                    main .impressaoContainer .impressaoTabela .tabelaExtrato tbody tr th:first-child, 
+                    main .impressaoContainer .impressaoTabela .tabelaExtrato tbody tr td:first-child {text-align: left;}
+
+                    main .impressaoContainer .impressaoTabela .tabelaExtrato tbody tr th:last-child, 
+                    main .impressaoContainer .impressaoTabela .tabelaExtrato tbody tr td:last-child {text-align: right;}
 
             main .impressaoContainer .impressaoTabela .saldoClientContainer {display: flex; flex-direction: column; align-items: flex-end;}
                 main .impressaoContainer .impressaoTabela .saldoClientContainer span {width: 100%; display: flex; font-size: 22px; justify-content: flex-end;}
