--- a/media/css/estilosLogin.css
+++ b/media/css/estilosLogin.css
@@ -2,7 +2,7 @@ html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquot
 small {font-size: 85%;} strong {font-weight: 800;} td, td img {vertical-align: top;} sub, sup {font-size: 75%; line-height: 0; position: relative;} sup {top: -0.5em;} sub {bottom: -0.25em;} pre, code, kbd, samp {font-family: monospace, sans-serif;}
 body{font: 500 17px "Open Sans"; line-height: 28px; letter-spacing: 0.01px; color: #6a7071; overflow-x: hidden; background: linear-gradient(180deg, rgba(230,239,254,1) 0%, rgba(215,222,232,1) 50%, rgba(222,230,242,1) 100%);}
 
-body {display: flex; padding: 55px 0; background-color: #0093E9; background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);}
+body {display: flex; padding: 55px 35px; background-color: #0093E9; background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%); min-height: 910px;}
     body .telaLogin {display: flex; width: 100%; max-width: 1280px; margin: 0 auto; min-height: 800px; background-color: #fff; border-radius: 10px;}
         body .telaLogin figure {position: relative; width: 100%; max-width: 640px; background: url(../img/fundoLogin.png) center center no-repeat; background-size: contain; height: 95%; margin-top: 20px; padding: 111px; border-right: #83858d solid 1px;}
             body .telaLogin figure img {position: absolute; max-width: 100px; border-radius: 50%; top: 163px; left: 104px; padding: 5px; border: solid 1px #292A2E; background: #EAF1FF;}
