--- a/media/css/estilos.css
+++ b/media/css/estilos.css
@@ -4,6 +4,8 @@ body{font: 500 17px "Open Sans"; line-height: 28px; letter-spacing: 0.01px; colo
 
 @keyframes trocaCor { 0% { color: #ffffff; } 50% { color: #4293E0; } 100% { color: #EDEFEF; } }
 
+body {background-color: #0093E9; background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);}
+
 body header {background-color: #ffffff; display: flex; width: 100%; max-width: 1320px; margin: 30px auto 0 auto; position: relative; border-radius: 25px 25px 0 0;}
     /* notificação do PHP */
     body .mensagem {color: #ffffff; font-size: 15px; position: absolute; z-index: 10; left: 50%; top: -17px; padding: 0 16px; border-radius: 5px; box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.5); font-family: 'Readex Pro', sans-serif; transition: all 0.5s ease-in;}
@@ -120,14 +122,23 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
                         body main .bemVindo .vitrine .formularios .formularioGeral .inputMesmaLinha .complemento:not(:placeholder-shown) + label {opacity: 1; visibility: visible; top: -12px; left: 40%; font-size: 10.5px; color: #ffffff; width: max-content; background-color: #0071cd; border-radius: 3px; padding: 0px 6px; line-height: 15px;}
 
             /* Tabela consultar Geral */
-            body main .bemVindo .vitrine .formularios .tabelaGeral {display: flex;}
+            body main .bemVindo .vitrine .formularios .tabelaGeral {display: flex; text-transform: capitalize;}
                 body main .bemVindo .vitrine .formularios .tabelaGeral table {margin:25px 20px;}
-                    body main .bemVindo .vitrine .formularios .tabelaGeral table tbody tr td, th {border-bottom: solid 1px #4293E0; padding: 2px 10px; max-width: 190px; font-size: 13px;}
-                        body main .bemVindo .vitrine .formularios .tabelaGeral table tbody tr td:nth-child(3) {max-width: 290px;}
+                    body main .bemVindo .vitrine .formularios .tabelaGeral tbody tr td, 
+                    body main .bemVindo .vitrine .formularios .tabelaGeral tbody tr th {border-bottom: solid 1px #4293E0; padding: 2px 10px; max-width: 190px; font-size: 13px;}
+                        body main .bemVindo .vitrine .formularios .tabelaGeral tbody tr td:nth-child(3) {max-width: 290px;}
+
+            /* Tabela Sessão Extrato */
+            /* body main .bemVindo .vitrine .formularios .tabelaExtrato */
 
             /* Tabela consultar Clientes*/
-            body main .bemVindo .vitrine .formularios .tabelaConsultarClientes table tbody tr td, th  {font-size: 11.5px;}
-                body main .bemVindo .vitrine .formularios .tabelaConsultarClientes table tbody tr td:nth-child(1) {max-width: 20px;}
+            body main .bemVindo .vitrine .formularios .tabelaConsultarClientes {width: 95%; margin-top: 35px;}
+                body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody {width: 100%;}
+                    body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody tr th,
+                    body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody tr td {font-size: 12px; text-align: center;}
+                        body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody tr td:nth-child(2) {/*width: 100%;*/ max-width: 200px}
+                        body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody tr td:nth-child(3) {/*width: 100%;*/ max-width: 230px}
+                        body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody tr td:nth-child(6) {/*width: 100%; */max-width: 220px}
 
                 /* Sessão - realizar vendas */
                 body main .bemVindo .vitrine .formularios .formularioRealizarVenda {width: 90%;}
@@ -196,12 +207,6 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
                                 body main .bemVindo .vitrine .formularios .formularioExtrato .inputMesmaLinha .containerInputLabel input:not(:placeholder-shown) + label {top: -6px; opacity: 1; visibility: visible;}
                         
                         body main .bemVindo .vitrine .formularios .formularioExtrato .inputMesmaLinha button {width: 200px; margin-bottom: 10px;}
-
-
-
-
-
-
 
         /* pagina de impressão - about:blank - nova guia */
         body main .impressaoContainer {display: flex; margin: 20 auto; width: 100%; max-width: 900px; justify-content: center;}
