--- a/media/css/estilos.css
+++ b/media/css/estilos.css
@@ -138,7 +138,10 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
                     body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody tr td {font-size: 12px; text-align: center;}
                         body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody tr td:nth-child(2) {/*width: 100%;*/ max-width: 200px}
                         body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody tr td:nth-child(3) {/*width: 100%;*/ max-width: 230px}
+                        body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody tr td:nth-child(4) {/*width: 100%;*/ max-width: 113px}
+                        body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody tr td:nth-child(5) {/*width: 100%;*/ max-width: 113px}
                         body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody tr td:nth-child(6) {/*width: 100%; */max-width: 220px}
+                        body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody tr td:nth-child(7) {/*width: 100%; */max-width: 100px}
 
                 /* Sessão - realizar vendas */
                 body main .bemVindo .vitrine .formularios .formularioRealizarVenda {width: 90%;}
