--- a/media/css/estilos.css
+++ b/media/css/estilos.css
@@ -122,14 +122,17 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
                         body main .bemVindo .vitrine .formularios .formularioGeral .inputMesmaLinha .complemento:not(:placeholder-shown) + label {opacity: 1; visibility: visible; top: -12px; left: 40%; font-size: 10.5px; color: #ffffff; width: max-content; background-color: #0071cd; border-radius: 3px; padding: 0px 6px; line-height: 15px;}
 
             /* Tabela consultar Geral */
-            body main .bemVindo .vitrine .formularios .tabelaGeral {display: flex; text-transform: capitalize;}
+            body main .bemVindo .vitrine .formularios .tabelaGeral { text-transform: capitalize;}
                 body main .bemVindo .vitrine .formularios .tabelaGeral table {margin:25px 20px;}
                     body main .bemVindo .vitrine .formularios .tabelaGeral tbody tr td, 
                     body main .bemVindo .vitrine .formularios .tabelaGeral tbody tr th {border-bottom: solid 1px #4293E0; padding: 2px 10px; max-width: 190px; font-size: 13px;}
                         body main .bemVindo .vitrine .formularios .tabelaGeral tbody tr td:nth-child(3) {max-width: 290px;}
 
-            /* Tabela Sessão Extrato */
-            /* body main .bemVindo .vitrine .formularios .tabelaExtrato */
+            /* Tabela da Sessão Histórico de Pagamento */
+            body main .bemVindo .vitrine .formularios .tabelaHistoricoPagamento {width: 100%; text-align: center;}
+                body main .bemVindo .vitrine .formularios .tabelaHistoricoPagamento tbody tr:last-child td {border: none; padding-top: 10px;}
+                body main .bemVindo .vitrine .formularios .tabelaHistoricoPagamento tbody tr td button {border: solid 1px #101A28; border-radius: 10px; padding: 9px; text-transform: uppercase; font-weight: 500; cursor: pointer; transition: all 0.5s ease}
+                    body main .bemVindo .vitrine .formularios .tabelaHistoricoPagamento tbody tr td button:hover {background-color: #101A28; color: #EDEFEF;}
 
             /* Tabela consultar Clientes*/
             body main .bemVindo .vitrine .formularios .tabelaConsultarClientes {width: 95%; margin-top: 35px;}
